Closed Bug 1760059 Opened 1 year ago Closed 1 year ago

Perma browser/extensions/formautofill/test/browser/browser_editAddressDialog.js | check country - Got "US", expected "DE"

Categories

(Toolkit :: Form Autofill, defect, P5)

defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox100 --- fixed
firefox101 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=371394563&repo=try
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/OhdriRXLRxu5JnREedKFxQ/runs/0/artifacts/public/logs/live_backing.log


Observed both in today's beta as release simulation, so far it only failed on Windows 7 WebRender Shippable.

[task 2022-03-17T15:16:02.866Z] 15:16:02     INFO - TEST-PASS | browser/extensions/formautofill/test/browser/browser_editAddressDialog.js | Border should be transparent so that only the error outline shows - 
[task 2022-03-17T15:16:02.866Z] 15:16:02     INFO - Leaving test bound test_combined_name_fields_error
[task 2022-03-17T15:16:02.867Z] 15:16:02     INFO - Entering test bound test_hiddenFieldNotSaved
[task 2022-03-17T15:16:02.867Z] 15:16:02     INFO - expecting record retrievals: addresses
[task 2022-03-17T15:16:02.868Z] 15:16:02     INFO - Buffered messages finished
[task 2022-03-17T15:16:02.869Z] 15:16:02     INFO - TEST-UNEXPECTED-FAIL | browser/extensions/formautofill/test/browser/browser_editAddressDialog.js | check country - Got "US", expected "DE"
[task 2022-03-17T15:16:02.869Z] 15:16:02     INFO - Stack trace:
[task 2022-03-17T15:16:02.869Z] 15:16:02     INFO - chrome://mochikit/content/browser-test.js:test_is:1422
[task 2022-03-17T15:16:02.869Z] 15:16:02     INFO - chrome://mochitests/content/browser/browser/extensions/formautofill/test/browser/browser_editAddressDialog.js:test_hiddenFieldNotSaved:800
[task 2022-03-17T15:16:02.870Z] 15:16:02     INFO - TEST-PASS | browser/extensions/formautofill/test/browser/browser_editAddressDialog.js | check address-level2 - 
[task 2022-03-17T15:16:02.871Z] 15:16:02     INFO - Not taking screenshot here: see the one that was previously logged
[task 2022-03-17T15:16:02.872Z] 15:16:02     INFO - TEST-UNEXPECTED-FAIL | browser/extensions/formautofill/test/browser/browser_editAddressDialog.js | address-level1 should not be saved - Got "ME", expected undefined
[task 2022-03-17T15:16:02.872Z] 15:16:02     INFO - Stack trace:
[task 2022-03-17T15:16:02.872Z] 15:16:02     INFO - chrome://mochikit/content/browser-test.js:test_is:1422
[task 2022-03-17T15:16:02.872Z] 15:16:02     INFO - chrome://mochitests/content/browser/browser/extensions/formautofill/test/browser/browser_editAddressDialog.js:test_hiddenFieldNotSaved:806
[task 2022-03-17T15:16:02.873Z] 15:16:02     INFO - expecting record retrievals: addresses
[task 2022-03-17T15:16:02.874Z] 15:16:02     INFO - expecting address removed
[task 2022-03-17T15:16:02.874Z] 15:16:02     INFO - expecting record retrievals: creditCards
[task 2022-03-17T15:16:02.875Z] 15:16:02     INFO - Leaving test bound test_hiddenFieldNotSaved
[task 2022-03-17T15:16:02.875Z] 15:16:02     INFO - Entering test bound test_hiddenFieldRemovedWhenCountryChanged
[task 2022-03-17T15:16:02.876Z] 15:16:02     INFO - expecting record retrievals: addresses
[task 2022-03-17T15:16:02.877Z] 15:16:02     INFO - TEST-PASS | browser/extensions/formautofill/test/browser/browser_editAddressDialog.js | no addresses at start of test - 

Hi Dimi! Can you please take a look at this? This is permafailing since the test got re-enabled in Bug 1717432.

Flags: needinfo?(dlee)

This fails only on macosx1015-64-shippable-qr and macosx1100-64-shippable-qr opt builds.

Hi Emilio
The testcase failure on mac seems to be related to whether we reset IncrementalString of HTMLSelectEventListener.

In some of the formautofill testcase, we do the following:

  1. focus on a <select> and then call synthesizeKey(xxx)
  2. focus on another <select> and then call synthesizeKey(yyy)
    In the failed case, incrementalString in step2 is xxxyyy instead of yyy

I would like to know if this is something we should workaround in our formautofill test code? or this is something we want to fix in HTMLSelectEventListener. Thanks!

Example testcase code
https://searchfox.org/mozilla-central/rev/26a1b0fce12e6dd495a954c542bb1e7bd6e0d548/browser/extensions/formautofill/test/browser/browser_editAddressDialog.js#792-795

Flags: needinfo?(dlee) → needinfo?(emilio)
Flags: needinfo?(emilio)

Switching focus seems like a reasonable reason to start the search
again.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ffb77d4ce793
Make incremental search string handling local to a given element. r=dimi
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch

I guess we could uplift the fix, it's not too risky.

Flags: needinfo?(emilio)

Comment on attachment 9270685 [details]
Bug 1760059 - Make incremental search string handling local to a given element. r=dimi

Beta/Release Uplift Approval Request

  • User impact if declined: None, in practice. Fixes some perma-failures on beta.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Relatively straight-forward fix to make autocomplete search local to an element.
  • String changes made/needed: none
Attachment #9270685 - Flags: approval-mozilla-beta?

Comment on attachment 9270685 [details]
Bug 1760059 - Make incremental search string handling local to a given element. r=dimi

Approved for 100.0b2.

Attachment #9270685 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.