Bug 1760059 - Make incremental search string handling local to a given element. r=dimi, a=dsmith

Switching focus seems like a reasonable reason to start the search
again.

Differential Revision: https://phabricator.services.mozilla.com/D142815